ready to clean repo

--- a/doc/todo/20210823.md
+++ b/doc/todo/20210823.md
@@ -1,6 +1,6 @@
-2021.08.23 
+:smiley:2021.08.23 
 
-- We are currentle deling with surfaces 
+- We are currentle dseling with surfaces 
 
 
 - Have to store Surface information
