add things to check next week

--- a/doc/todo/20211019.md
+++ b/doc/todo/20211019.md
@@ -14,3 +14,8 @@
 
 - Future:
   - Improve localization -> make a system that finishes the picture color by color ( y -> m -> c -> k)
+
+- Check:
+  - When does ridgeback start malfunctioning during alignment?
+  - What is the threshold in diverse scripts / real / simulation?
+  - What code works in simulation / real robot?
