--- a/doc/todo/20211019.md
+++ b/doc/todo/20211019.md
@@ -19,3 +19,6 @@
   - When does ridgeback start malfunctioning during alignment?
   - What is the threshold in diverse scripts / real / simulation?
   - What code works in simulation / real robot?
+
+- Create
+  - Worksheet structure to keep track of daily progress & share with team
